deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cptmcp-temp
# ---
# apiVersion: v1
# kind: Pod
# metadata:
#   name: springboot-maven-pipline-demo
#   namespace: cptmcp-temp
#   labels:
#     cs.cptmcp.com/app: springboot-maven-pipline-demo
#     cs.cptmcp.com/env: dev
#     cs.cptmcp.com/version: 0.0.1
#     cs.cptmcp.com/release: SNAPSHOT
#     cs.cptmcp.com/tier: backend
#     cs.cptmcp.com/part-of: xny
#     cs.cptmcp.com/managed-by: manual-yaml
#     cs.cptmcp.com/language: java
#     cs.cptmcp.com/component: springboot
# spec:
#   containers:
#   - name: jdk8u202
#     image: harbor.cs.cptmcp.com:30723/library/ringcentral/jdk:8u202
#     ports:
#       - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: springboot-maven-pipline-demo
  namespace: cptmcp-temp
spec:
  selector:
    cs.cptmcp.com/app: springboot-maven-pipline-demo
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: springboot-maven-pipline-demo
  namespace: cptmcp-temp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: hey.nemo.com
      http:
        paths:
        - path: /zt/springboot-maven-pipline-demo(/|$)(.*)
          backend:
            serviceName: springboot-maven-pipline-demo
            servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-maven-pipline-demo
spec:
  replicas: 1
  selector:
    matchLabels:
       cs.cptmcp.com/app: springboot-maven-pipline-demo
  template:
    metadata:
      name: springboot-maven-pipline-demo
      namespace: cptmcp-temp
      labels:
        cs.cptmcp.com/app: springboot-maven-pipline-demo
        cs.cptmcp.com/env: dev
        cs.cptmcp.com/version: 0.0.1
        cs.cptmcp.com/release: SNAPSHOT
        cs.cptmcp.com/tier: backend
        cs.cptmcp.com/part-of: xny
        cs.cptmcp.com/managed-by: manual-yaml
        cs.cptmcp.com/language: java
        cs.cptmcp.com/component: springboot
    spec:
      containers:
      - name: jdk8u202
        image: harbor.cs.cptmcp.com:30723/temp/zhangting/springboot-maven-pipline-demo:0.0.4
        ports:
          - containerPort: 8080
